  new arguments introduced in 2.5.

- Issue #5828 (Invalid behavior of unicode.lower): Fixed bogus logic in
  makeunicodedata.py and regenerated the Unicode database (This fixes
  u'\u1d79'.lower() == '\x00').

- Windows locale mapping updated to Vista.

Tools/Demos
-----------

- Ttk demos added in Demo/tkinter/ttk/

- Issue #4677: add two list comprehension tests to pybench.

Build
-----

- Add 2 new options to ``--with-universal-archs`` on MacOSX:
  ``intel`` builds a distribution with ``i386`` and ``x86_64`` architectures,
  while ``3-way`` builds a distribution with the ``ppc``, ``i386``
  and ``x86_64`` architectures.

- Issue #6802: Fix build issues on MacOSX 10.6

- Issue #6244: Allow detect_tkinter to look for Tcl/Tk 8.6.

- Issue 5390: Add uninstall icon independent of whether file
  extensions are installed.

- Issue 5809: Specifying both --enable-framework and --enable-shared is
  an error. Configure now explicity tells you about this.

- Issue #3585: Add pkg-config support. It creates a python-2.7.pc file
  and a python.pc symlink in the $(LIBDIR)/pkgconfig directory. Patch by
  Clinton Roy.

- Issue #6094: Build correctly with Subversion 1.7.

- Issue #5847: Remove -n switch on "Edit with IDLE" menu item.

- Issue #5726: Make Modules/ld_so_aix return the actual exit code of the
  linker, rather than always exit successfully. Patch by Floris Bruynooghe.

- Issue #4587: Add configure option --with-dbmliborder=db1:db2:... to specify
  the order that backends for the dbm extension are checked.

- Link the shared python library with $(MODLIBS).

- Issue #5134: Silence compiler warnings when compiling sqlite with VC++.

- Issue #4494: Fix build with Py_NO_ENABLE_SHARED on Windows.

- Issue #4895: Use _strdup on Windows CE.

- Issue #4472: "configure --enable-shared" now works on OSX

- Issues #4728 and #4060: WORDS_BIGEDIAN is now correct in Universal builds.

- Issue #4389: Add icon to the uninstall entry in "add-and-remove-programs".
